@@ -12,14 +12,12 @@ import user_service.dto.user.UserRequestDto;
 import user_service.dto.user.UserResponseDto;
 import user_service.entity.User;
 import user_service.exception.EmailAlreadyExistsException;
-import user_service.exception.InvalidRequestException;
 import user_service.exception.UserNotFoundException;
 import user_service.exception.UserProfileAlreadyExistsException;
 import user_service.exception.UsersNotFoundException;
 import user_service.mapper.UserMapper;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,19 +25,6 @@ public class UserService {
     private final UserDao userDao;
     private final UserMapper userMapper;
     private final CacheManager cacheManager;
-
-    @Transactional
-    @CachePut(value = "user:id", key = "#result.id")
-    public UserResponseDto createUser(UserRequestDto userRequestDto) {
-        String email = userRequestDto.getEmail();
-        if (userDao.findUserByEmail(email).isPresent()) {
-            throw new EmailAlreadyExistsException(email);
-        }
-
-        User user = userMapper.toUser(userRequestDto);
-        user = userDao.save(user);
-        return userMapper.toResponseDto(user);
-    }
 
     @Transactional
     @CachePut(value = "user:id", key = "#result.id")
@@ -64,19 +49,6 @@ public class UserService {
         return userMapper.toResponseDto(user);
     }
 
-    public Object getUsersByIdsOrEmail(List<Long> ids, String email) {
-        if (ids != null && email != null) {
-            throw new InvalidRequestException("Specify user ids OR email");
-        }
-        if (email != null) {
-            return getUserByEmail(email);
-        }
-        if (ids != null) {
-            return getUsersByIds(ids);
-        }
-        throw new InvalidRequestException("Specify user ids or email");
-    }
-
     public List<UserResponseDto> getUsersByIds(List<Long> ids) {
         List<User> users = userDao.findUsersByIdIn(ids);
         if (users == null || users.isEmpty()) {
@@ -85,7 +57,7 @@ public class UserService {
         return users
                 .stream()
                 .map(userMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public UserResponseDto getUserByEmail(String email) {
@@ -101,10 +73,8 @@ public class UserService {
         String email = userRequestDto.getEmail();
 
         boolean emailChanged = !existingUser.getEmail().equals(email);
-        if (emailChanged) {
-            if (userDao.findUserByEmail(email).isPresent()) {
-                throw new EmailAlreadyExistsException(email);
-            }
+        if (emailChanged && userDao.findUserByEmail(email).isPresent()) {
+            throw new EmailAlreadyExistsException(email);
         }
 
         userMapper.updateUserFromDto(userRequestDto, existingUser);
